fix spacing

--- a/sass/style.scss
+++ b/sass/style.scss
@@ -145,7 +145,7 @@ footer {
   padding: 3rem 2rem 0rem 2rem;
 
   h3 {
-    margin-bottom: .7rem;
+    margin-bottom: 0rem;
   }
 
   h3, li.heading {
@@ -158,7 +158,8 @@ footer {
   }
 
   ul > li {
-    line-height: 2.2rem;
+    line-height: 1;
+    margin-bottom: .8rem;
   }
 
   p, li > a {
